lec6ex1/compute/logs/hls_run_csim.log
INFO: [vitis-run 60-1548] Creating build summary session with primary output /scratch/tsussman/lec6ex1/compute/compute.hlsrun_csim_summary, at Tue Mar 17 14:16:46 2026
INFO: [vitis-run 82-31] Launching vitis_hls: vitis_hls -nolog -run csim -work_dir /scratch/tsussman/lec6ex1/compute -config /scratch/tsussman/lec6ex1/lec6ex1_config.cfg -cmdlineconfig /scratch/tsussman/lec6ex1/compute/hls/config.cmdline
INFO: [HLS 200-10] For user 'tsussman' on host 'login04.hep.wisc.edu' (Linux_x86_64 version 6.1.166-1.el9.elrepo.x86_64) on Tue Mar 17 14:16:53 CDT 2026
INFO: [HLS 200-10] On os "AlmaLinux release 9.7 (Moss Jungle Cat)"
INFO: [HLS 200-10] In directory '/scratch/tsussman/lec6ex1'
INFO: [HLS 200-2005] Using work_dir /scratch/tsussman/lec6ex1/compute 
INFO: [HLS 200-1505] Using default flow_target 'vivado'
Resolution: For help on HLS 200-1505 see docs.xilinx.com/access/sources/dita/topic?Doc_Version=2024.1%20English&url=ug1448-hls-guidance&resourceid=200-1505.html
INFO: [HLS 200-1465] Applying ini 'syn.file=/scratch/tsussman/homework2/lec6ex1.cpp' from /scratch/tsussman/lec6ex1/lec6ex1_config.cfg(8)
INFO: [HLS 200-10] Adding design file '/scratch/tsussman/homework2/lec6ex1.cpp' to the project
INFO: [HLS 200-1465] Applying ini 'tb.file=/scratch/tsussman/homework2/lec6ex1.cpp' from /scratch/tsussman/lec6ex1/lec6ex1_config.cfg(9)
INFO: [HLS 200-10] Adding test bench file '/scratch/tsussman/homework2/lec6ex1.cpp' to the project
INFO: [HLS 200-1465] Applying ini 'syn.top=compute' from /scratch/tsussman/lec6ex1/lec6ex1_config.cfg(7)
INFO: [HLS 200-1465] Applying ini 'flow_target=vivado' from /scratch/tsussman/lec6ex1/lec6ex1_config.cfg(4)
INFO: [HLS 200-1505] Using flow_target 'vivado'
Resolution: For help on HLS 200-1505 see docs.xilinx.com/access/sources/dita/topic?Doc_Version=2024.1%20English&url=ug1448-hls-guidance&resourceid=200-1505.html
INFO: [HLS 200-1465] Applying ini 'part=xcvu9p-flga2104-2-i' from /scratch/tsussman/lec6ex1/lec6ex1_config.cfg(1)
INFO: [HLS 200-1611] Setting target device to 'xcvu9p-flga2104-2-i'
INFO: [HLS 200-1465] Applying ini 'package.output.format=ip_catalog' from /scratch/tsussman/lec6ex1/lec6ex1_config.cfg(5)
INFO: [SIM 211-2] *************** CSIM start ***************
INFO: [SIM 211-4] CSIM will launch CLANG as the compiler.
INFO: [HLS 200-2036] Building debug C Simulation binaries
   Compiling ../../../../../homework2/lec6ex1.cpp in debug mode
../../../../../homework2/lec6ex1.cpp:34:5: error: use of undeclared identifier 'check_results'
    check_results();
    ^
1 error generated.
make: *** [csim.mk:87: obj/lec6ex1.o] Error 1
ERROR: [SIM 211-100] 'csim_design' failed: compilation error(s).
INFO: [SIM 211-3] *************** CSIM finish ***************
ERROR: 4
INFO: [HLS 200-112] Total CPU user time: 10.86 seconds. Total CPU system time: 1.68 seconds. Total elapsed time: 12.28 seconds; peak allocated memory: 287.371 MB.
